02. minisvc: updated create_cert function - synced with svctool
03. minisvc: added --update-certs option from svctool
- 11/03/2024
04. installer.c: fixed displaying size variable, fixed allocation of zerobuf
    variable
- 01/04/2024
05. supervise.c: set PPID env variable for child
06. supervise.c: added comments, updated variable name for flagwant, spid arg

* Sun Mar 03 2024 12:20:15 +0000 Manvendra Bhangui <daemontools@indimail.org> 1.1.4-1.1%{?dist}
Release 1.1.4-1.1 Start 09/02/2024 End 03/02/2024
- 09/02/2024
01. installer.c, supervise.c: replace chown, chmod with fchown, fchmod
02. Makefile: test presence of unlinkat() for multilog
- 10/02/2024
03. installer.c: removed unused options and fixed check option for fixing
    permissions
- 10/02/2024
04. installer.c: added 'z' option to create files with fized number of zeros.
05. multilog.c: use unlinkat() if available instead of unlink
- 18/02/2024
06. multilog.c: BUG: fix wrong argument passed to open_read() in finish()
- 26/02/2024
07. systemd.in: replace /etc/init.d/svscan with /usr/bin/qmailctl for ExeStop
- 28/02/2024
08. svscan.c: send SIGTERM twice followed by SIGKILL to terminate logging and
then remaining processes
09. supervise.c: Fixed termination of processes with -G option when no
    processes found in a process group
- 03/02/2024 - indimail-mta-3.0.7

* Mon Jan 01 2024 16:53:05 +0000 Manvendra Bhangui <daemontools@indimail.org> 1.1.3-1.1%{?dist}
Release 1.1.3-1.1 Start 27/04/2023 End 01/01/2024
- 27/04/2023
01. reduce sleep to 1 when service being waited for hasn't started
- 03/05/2023
02. minisvc.in: synced daemontools/minisvc, indimail-mta/svctool create_svscan
    function
- 05/05/2023
03. supervise.c: fixed waitpid returning EINVAL on OSX
04. supervise.c: disable warning message if pid does not exist
05. svscan.c: turn on verbose, silent using env variables VERBOSE, SILENT
- 01/07/2023
06. minisvc.in: skip indimail-mta variables when creating svscan service
- 22/07/2023